--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Test App Idea Platform</string>
+    <string name="list_of_products">Список товаров</string>
 </resources>
